--- a/.travis.yml
+++ b/.travis.yml
@@ -29,8 +29,7 @@ install:
 
   # Currently we expect MOOGSILENT to be installed separately on the user's computer.
   # For Travis we will just ask him to install the batch version for now.
-  - pip install moogsilent
-  - pip install coveralls
+  - pip install https://github.com/andycasey/moog/archive/batch.2014jul.zip
   - python setup.py install --with-models
 script:
   - nosetests --with-coverage --cover-package=smh
