--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,9 @@ install:
 
   # Currently we expect MOOGSILENT to be installed separately on the user's computer.
   # For Travis we will just ask him to install the batch version for now.
-  - pip install https://github.com/andycasey/moog/archive/batch.2014jul.zip
+  - pip install https://github.com/andycasey/moog/archive/batch.2014jul.zip --user
+  - which MOOGSILENT
+  - which moogsilent
   - python setup.py install --with-models
 script:
   - nosetests --with-coverage --cover-package=smh
