--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ install:
   # Currently we expect MOOGSILENT to be installed separately on the user's computer.
   # For Travis we will just ask him to install the batch version for now.
   - pip install https://github.com/andycasey/moog/archive/makefile-templates.zip -vvv
-  - "which moogsilent"
+  # Installs to /home/travis/miniconda2/bin/MOOGSILENT, which is already on $PATH
   - python setup.py install --with-models
 script:
   - nosetests --with-coverage --cover-package=smh
