--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,7 @@ install:
   - python setup.py install --with-models
 script:
   - nosetests --with-coverage --cover-package=smh
-  - pyuic exception.ui
+  - pyuic4 exception.ui
 after_success:
   coveralls
 #branches:
