--- a/smh/default_session.yaml
+++ b/smh/default_session.yaml
@@ -89,3 +89,51 @@ summary:
         x_column: TEFF
         y_column: XI
         #z_column: 6
+
+summary_figure:
+  spectra_filenames:
+    - [he1523-0901, 4630, 4370]
+    - [cd-38_245, -1, -1]
+    - [cs22892-52, 4800, 4620]
+    - [g64-12, 6450, 6430]
+    - [hd122563, 4600, 4350]
+    - [hd140283, 5650, 5550]
+  top_left:
+    label: H-beta
+    wavelength_range: [4858.33, 4864.33]
+    ylim: [0, 1.2]
+    spectra_to_plot:
+      - hd122563
+      - he1523-0901
+      - cs22892-52
+      - hd140283
+      - g64-12
+  top_right:
+    label: H-alpha
+    wavelength_range: [6559.8, 6565.8]
+    ylim: [0, 1.2]
+    spectra_to_plot:
+      - hd122563
+      - he1523-0901
+      - cs22892-52
+      - hd140283
+      - g64-12
+  middle:
+    label: Mg
+    wavelength_range: [5163, 5187]
+    ylim: [0.2, 1.4]
+    spectra_to_plot:
+      - cd-38_245
+      - cs22892-52
+  bottom_left:
+    label: CH
+    wavelength_range: [4305, 4317]
+    ylim: [0.0, 1.5]
+    spectra_to_plot:
+      - cs22892-52
+  bottom_right:
+    label: Eu
+    wavelength_range: [4127, 4131]
+    ylim: [0.0, 1.4]
+    spectra_to_plot:
+      - he1523-0901
