--- a/smh/default_session.yaml
+++ b/smh/default_session.yaml
@@ -90,6 +90,12 @@ summary:
         y_column: XI
         #z_column: 6
 
+zoom_shortcuts:
+  1: [0.0, 1.2]
+  2: [0.5, 1.1]
+  3: [0.8, 1.05]
+  4: [0.9, 1.05]
+
 summary_figure:
   spectra_filenames:
     - [he1523-0901, 4630, 4370]
