Include default fitting  options for Balmer lines

--- a/smh/default_session.yaml
+++ b/smh/default_session.yaml
@@ -1,3 +1,50 @@
+balmer_line_fitting:
+  balmer_line_index: 1
+  masks:
+  - [3184.753, 4821.814]
+  - [4876.974, 4907.252]
+  - [4814.738, 4842.660]
+  - [4865.319, 4865.736]
+  - [4865.914, 4866.568]
+  - [4870.968, 4871.622]
+  - [4871.800, 4872.573]
+  - [4854.616, 4854.973]
+  - [4855.271, 4855.568]
+  - [4855.211, 4855.330]
+  - [4848.849, 4849.384]
+  - [4860.995, 4861.572]
+  - [4859.474, 4859.814]
+  - [4873.706, 4877.657]
+  - [4844.844, 4851.540]
+  - [4859.642, 4859.932]
+  - [4860.841, 4861.836]
+  - [4860.825, 4860.911]
+  - [4860.590, 4862.064]
+  - [6593.809, 9192.527]
+  - [4893.862, 6524.569]
+  - [6544.543, 6545.293]
+  - [6545.917, 6546.792]
+  - [6549.165, 6550.414]
+  - [6553.038, 6554.537]
+  - [6534.675, 6536.423]
+  - [6533.176, 6533.800]
+  - [6543.294, 6544.043]
+  - [6572.775, 6573.399]
+  - [6575.273, 6576.647]
+  - [6573.649, 6575.648]
+  - [6587.016, 6588.889]
+  - [6592.012, 6594.761]
+  - [6565.030, 6565.654]
+  - [6558.909, 6559.783]
+  - [6557.410, 6558.409]
+  - [6561.858, 6563.735]
+  metadata:
+    bounds: {}
+    continuum: true
+    continuum_order: 3
+    redshift: true
+    smoothing: false
+  spectrum_index: 0
 rv:
   wavelength_regions:
     - [8450, 8750]
