--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ install:
   - if [[ $TRAVIS_PYTHON_VERSION == 2* ]]; then conda install --yes python=$TRAVIS_PYTHON_VERSION pyside; fi
   - if [[ $TRAVIS_PYTHON_VERSION == '3.4' ]]; then pip install pyside; fi
   - pip install https://github.com/andycasey/moog/archive/makefile-templates.zip -vvv
-  - python setup.py install --with-models
+  - python setup.py install 
 script:
   - nosetests --with-coverage --cover-package=smh
 after_success:
