--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ before_install:
   # So that we can use matplotlib on Travis.
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
+  - "mkdir $HOME/.smh"
 
 install: 
   - conda install --yes python=$TRAVIS_PYTHON_VERSION atlas numpy scipy astropy matplotlib nose six coverage
