--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,8 @@ before_install:
   - ./miniconda.sh -b
   - export PATH=/home/travis/miniconda2/bin:$PATH
   - conda update --yes conda
-  
+  - "mkdir $HOME/.smh"  
+
   # So that we can use matplotlib on Travis.
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
