--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
   - ./miniconda.sh -b
   - export PATH=/home/travis/miniconda2/bin:$PATH
   - conda update --yes conda
-  - "mkdir $HOME/.smh"  
+  # Fingers crossed..
   - "export QT_API=PySide"
 
   # So that we can use matplotlib on Travis.
