--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -1,13 +1,11 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
 name: Python application
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "master", "v3" ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "master", "v3" ]
 
 permissions:
   contents: read
@@ -15,7 +13,16 @@ permissions:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+  runs-on: ${{ matrix.os }}
+  strategy:
+    matrix:
+      os: [ubuntu-latest, macos-latest, windows-latest]
+      python-version: ["3.9", "3.10", "3.11"]
+      #exclude:
+      #  - os: macos-latest
+      #    python-version: "3.9"
+      #  - os: windows-latest
+      #    python-version: "3.9"
 
     steps:
     - uses: actions/checkout@v3
